Update to verb calculations to treat verbs as tense-insensitive. Some rework to functions that get the subjects. Moving some cells around too.

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -864,35 +864,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "905dd967",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def find_subjects(token):\n",
-    "#     ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
-    "#     subjects = []\n",
-    "#     ''' Token's children '''\n",
-    "#     for child in token.children:\n",
-    "#         if 'subj' in child.dep_:\n",
-    "#             subjects.append(child)\n",
-    "#     return subjects\n",
-    "\n",
-    "def find_subjects(doc, original_verbs, match_verb):\n",
-    "    ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
-    "    subjects = []\n",
-    "    ''' Token's children '''\n",
-    "    for token in doc:\n",
-    "        if token.text in original_verbs and token.lemma_ ==match_verb:\n",
-    "            for child in token.children:\n",
-    "                if 'subj' in child.dep_:\n",
-    "                    child = child.text.lower()\n",
-    "                    subjects.append(f\"{child}, {token.text}\")\n",
-    "    return subjects\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9d03d310",
    "metadata": {},
@@ -918,30 +889,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "58c177d4",
+   "execution_count": null,
+   "id": "905dd967",
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = sum(freq_counter_dict_words(doc).values()) # unique word total (N)"
+    "def find_subjects(token, match_verb):\n",
+    "    ''' Function to find the subjects of a token - both up and down the parse tree '''\n",
+    "    subjects = []\n",
+    "    ''' Token's children '''\n",
+    "\n",
+    "    if token.lemma_ ==match_verb:\n",
+    "        for child in token.children:\n",
+    "            if 'subj' in child.dep_:\n",
+    "                subjects.append((child, token))\n",
+    "                \n",
+    "    return subjects\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "21710c4f",
+   "execution_count": null,
+   "id": "8a22a02f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# doc=df['docs'][0]\n",
+    "N = sum(freq_counter_dict_words(doc).values()) # unique word total (N)\n",
     "verb_counts = get_verbs(doc)\n",
-    "verb_probs = [(k,\n",
-    "    v/N) for k,v in verb_counts.items()]\n",
-    "\n",
-    "subjects = find_subjects(\n",
-    "    doc, \n",
-    "    original_verbs=[verb_prob[0] for verb_prob in verb_probs],\n",
-    "    match_verb='hear')\n",
+    "verb_f = sum(verb_counts.values()) # consider the verbs as a single verb (as we are treating 'hear' as tense-insensitive)\n",
+    "verb_prob = verb_f / N\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8035c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "df_s = pd.DataFrame(subjects, columns=['pairs'])\n",
     "df_s[['subject', 'verb']] = df_s['pairs'].str.split(',', expand=True)"
@@ -949,31 +935,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "8a22a02f",
+   "execution_count": 144,
+   "id": "fbb54790",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('hear', 0.0005847209863988814),\n",
-       " ('heard', 0.0006609889411465616),\n",
-       " ('hearing', 0.00018643277827210713),\n",
-       " ('hears', 8.474217194186686e-06)]"
+       "0.0014406169230117367"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "verb_probs"
+    "verb_prob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "6364387d",
    "metadata": {},
    "outputs": [],
@@ -983,23 +966,75 @@
     "    \"\"\"Extracts the most common subjects of a given verb in a parsed document. Returns a list.\"\"\"\n",
     "    ''' Added a parameter to remove multiple counts of 1 in the most frequent.\n",
     "    > Setting to n=10 sliced the list by order, which didn't have much meaning in the returned values\n",
-    "    > Have opted to include the count\n",
     "    '''\n",
     "    subject_text = []\n",
     "\n",
     "    for token in doc:\n",
     "        if token.pos_ == \"VERB\" and token.lemma_ == verb:\n",
-    "            subjects = find_subjects(token)\n",
+    "            subjects = find_subjects(token, verb)\n",
     "            if subjects:\n",
-    "                subject_text.extend([subject.text.lower() for subject in subjects])\n",
-    "    subject_counts = Counter(subject_text)\n",
-    "    subject_counts = subject_counts.most_common()[:n]\n",
-    "    if trim_singles:\n",
-    "        return [x for x in subject_counts if x[1] >1]\n",
-    "    else:\n",
-    "        return  subject_counts\n",
+    "                for subject in subjects:\n",
+    "                    subject_text.extend([(subject[0].text.lower(), subject[1]) for subject in subjects])\n",
     "\n",
-    "subjects_by_verb_count(df['docs'][0], verb='hear')\n"
+    "    return  subject_text\n",
+    "subject_counts = subjects_by_verb_count(doc, verb='hear')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "5e966342",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'i': 28,\n",
+       "         'you': 19,\n",
+       "         'she': 14,\n",
+       "         'elinor': 6,\n",
+       "         'he': 6,\n",
+       "         'they': 5,\n",
+       "         'me': 4,\n",
+       "         'jennings': 3,\n",
+       "         'them': 2,\n",
+       "         'both': 2,\n",
+       "         'brandon': 1,\n",
+       "         'us': 1,\n",
+       "         'palmer': 1,\n",
+       "         'we': 1,\n",
+       "         'john': 1,\n",
+       "         'one': 1,\n",
+       "         'marianne': 1,\n",
+       "         'nothing': 1,\n",
+       "         'dissent': 1,\n",
+       "         'much': 1,\n",
+       "         'footsteps': 1,\n",
+       "         'herself': 1,\n",
+       "         'edward': 1,\n",
+       "         'who': 1,\n",
+       "         'willoughby': 1})"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter([s for s, v in subject_counts])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73ce1d23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range, len(subject_counts)\n",
+    "Counter([s for s, v in subjects_by_verb_count(doc, verb='hear')]).values()\n",
+    "# Counter(subjects_by_verb_count(doc, verb='hear'))\n"
    ]
   },
   {
