Calculations for the components of PMI Not "atomic" but committing because this took a while...

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b9ed11f3",
    "metadata": {},
    "outputs": [],
@@ -61,6 +61,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import re\n",
+    "from math import log2\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "nlp.max_length = 2000000\n",
@@ -910,48 +911,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a22a02f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# doc=df['docs'][0]\n",
-    "N = sum(freq_counter_dict_words(doc).values()) # unique word total (N)\n",
-    "verb_counts = get_verbs(doc)\n",
-    "verb_f = sum(verb_counts.values()) # consider the verbs as a single verb (as we are treating 'hear' as tense-insensitive)\n",
-    "verb_prob = verb_f / N\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d8035c58",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "df_s = pd.DataFrame(subjects, columns=['pairs'])\n",
-    "df_s[['subject', 'verb']] = df_s['pairs'].str.split(',', expand=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "id": "fbb54790",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0014406169230117367"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "verb_prob"
+    "# df_s = pd.DataFrame(subjects, columns=['pairs'])\n",
+    "# df_s[['subject', 'verb']] = df_s['pairs'].str.split(',', expand=True)"
    ]
   },
   {
@@ -982,59 +948,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 176,
+   "id": "8a22a02f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# doc=df['docs'][0]\n",
+    "all_word_freq = freq_counter_dict_words(doc)\n",
+    "N = sum(all_word_freq.values()) # unique word total (N)\n",
+    "verb_counts = get_verbs(doc)\n",
+    "verb_f = sum(verb_counts.values()) # consider the verbs as a single verb (as we are treating 'hear' as tense-insensitive)\n",
+    "verb_prob = verb_f / N\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
    "id": "5e966342",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>f_word_verb</th>\n",
+       "      <th>p_word_verb</th>\n",
+       "      <th>p_verb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.000237</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>you</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.000161</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>she</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.000119</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>elinor</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>he</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>they</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.000042</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>me</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>jennings</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>them</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>both</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.001441</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Counter({'i': 28,\n",
-       "         'you': 19,\n",
-       "         'she': 14,\n",
-       "         'elinor': 6,\n",
-       "         'he': 6,\n",
-       "         'they': 5,\n",
-       "         'me': 4,\n",
-       "         'jennings': 3,\n",
-       "         'them': 2,\n",
-       "         'both': 2,\n",
-       "         'brandon': 1,\n",
-       "         'us': 1,\n",
-       "         'palmer': 1,\n",
-       "         'we': 1,\n",
-       "         'john': 1,\n",
-       "         'one': 1,\n",
-       "         'marianne': 1,\n",
-       "         'nothing': 1,\n",
-       "         'dissent': 1,\n",
-       "         'much': 1,\n",
-       "         'footsteps': 1,\n",
-       "         'herself': 1,\n",
-       "         'edward': 1,\n",
-       "         'who': 1,\n",
-       "         'willoughby': 1})"
+       "       word  f_word_verb  p_word_verb    p_verb\n",
+       "0         i           28     0.000237  0.001441\n",
+       "1       you           19     0.000161  0.001441\n",
+       "2       she           14     0.000119  0.001441\n",
+       "3    elinor            6     0.000051  0.001441\n",
+       "4        he            6     0.000051  0.001441\n",
+       "5      they            5     0.000042  0.001441\n",
+       "6        me            4     0.000034  0.001441\n",
+       "7  jennings            3     0.000025  0.001441\n",
+       "8      them            2     0.000017  0.001441\n",
+       "9      both            2     0.000017  0.001441"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Counter([s for s, v in subject_counts])\n"
+    "top_ten = Counter([s for s, v in subject_counts]).most_common()[:10]\n",
+    "df_c = pd.DataFrame(data=top_ten, columns=['word', 'f_word_verb'])\n",
+    "df_c['p_word_verb'] = df_c['f_word_verb']/N\n",
+    "df_c['p_verb'] = verb_prob\n",
+    "\n",
+    "df_c"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ce1d23",
+   "id": "057e956d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range, len(subject_counts)\n",
-    "Counter([s for s, v in subjects_by_verb_count(doc, verb='hear')]).values()\n",
-    "# Counter(subjects_by_verb_count(doc, verb='hear'))\n"
+    "def apply_log2(x):\n",
+    "    return log2(x)\n",
+    "\n",
+    "''' work in progress - to go into a function \n",
+    "and possibly tidy the rest of functions\n",
+    "'''\n",
+    "df_c['f_word'] = df_c['word'].map(all_word_freq)\n",
+    "\n",
+    "df_c['p_word'] = df_c['f_word'] / N\n",
+    "df_c = df_c[['word', 'f_word', 'f_word_verb', 'p_word','p_verb', 'p_word_verb']] # ~ reorder\n",
+    "df_c['P(w)P(v)'] = df_c['p_word']*df_c['p_verb'] #~ product of independent\n",
+    "df_c['fracts'] = df_c['p_word_verb'] / df_c['P(w)P(v)'] # ~ joint probabilities scaled to product of independents \n",
+    "\n",
+    "df_c['pmi'] = df_c['fracts'].apply(lambda x: apply_log2(x)) #~ apply log2 to result for pmi\n",
+    "df_c = df_c.sort_values('pmi', ascending=False) #~ return ordered (descending)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "bdc813ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word</th>\n",
+       "      <th>f_word</th>\n",
+       "      <th>f_word_verb</th>\n",
+       "      <th>p_word</th>\n",
+       "      <th>p_verb</th>\n",
+       "      <th>p_word_verb</th>\n",
+       "      <th>P(w)P(v)</th>\n",
+       "      <th>fracts</th>\n",
+       "      <th>pmi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>both</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000788</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>14.927894</td>\n",
+       "      <td>3.899939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>you</td>\n",
+       "      <td>1171</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.009923</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000161</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>11.262847</td>\n",
+       "      <td>3.493500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.016618</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000237</td>\n",
+       "      <td>0.000024</td>\n",
+       "      <td>9.911330</td>\n",
+       "      <td>3.309079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>jennings</td>\n",
+       "      <td>234</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.001983</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>8.899321</td>\n",
+       "      <td>3.153695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>they</td>\n",
+       "      <td>513</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.004347</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000042</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>6.765566</td>\n",
+       "      <td>2.758211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>me</td>\n",
+       "      <td>428</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.003627</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>6.487356</td>\n",
+       "      <td>2.697631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>she</td>\n",
+       "      <td>1580</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.013389</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000119</td>\n",
+       "      <td>0.000019</td>\n",
+       "      <td>6.150670</td>\n",
+       "      <td>2.620744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>elinor</td>\n",
+       "      <td>680</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.005762</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>6.124827</td>\n",
+       "      <td>2.614669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>he</td>\n",
+       "      <td>1094</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.009271</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000051</td>\n",
+       "      <td>0.000013</td>\n",
+       "      <td>3.807022</td>\n",
+       "      <td>1.928663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>them</td>\n",
+       "      <td>464</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.003932</td>\n",
+       "      <td>0.001441</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>2.992013</td>\n",
+       "      <td>1.581117</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       word  f_word  f_word_verb    p_word    p_verb  p_word_verb  P(w)P(v)  \\\n",
+       "9      both      93            2  0.000788  0.001441     0.000017  0.000001   \n",
+       "1       you    1171           19  0.009923  0.001441     0.000161  0.000014   \n",
+       "0         i    1961           28  0.016618  0.001441     0.000237  0.000024   \n",
+       "7  jennings     234            3  0.001983  0.001441     0.000025  0.000003   \n",
+       "5      they     513            5  0.004347  0.001441     0.000042  0.000006   \n",
+       "6        me     428            4  0.003627  0.001441     0.000034  0.000005   \n",
+       "2       she    1580           14  0.013389  0.001441     0.000119  0.000019   \n",
+       "3    elinor     680            6  0.005762  0.001441     0.000051  0.000008   \n",
+       "4        he    1094            6  0.009271  0.001441     0.000051  0.000013   \n",
+       "8      them     464            2  0.003932  0.001441     0.000017  0.000006   \n",
+       "\n",
+       "      fracts       pmi  \n",
+       "9  14.927894  3.899939  \n",
+       "1  11.262847  3.493500  \n",
+       "0   9.911330  3.309079  \n",
+       "7   8.899321  3.153695  \n",
+       "5   6.765566  2.758211  \n",
+       "6   6.487356  2.697631  \n",
+       "2   6.150670  2.620744  \n",
+       "3   6.124827  2.614669  \n",
+       "4   3.807022  1.928663  \n",
+       "8   2.992013  1.581117  "
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_c"
    ]
   },
   {
