Moving some cells and starting the work on classifiers

--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -360,6 +360,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6fc5402b",
+   "metadata": {},
+   "source": [
+    "1) Anachronistic terminology which is no longer part of the modern vernacular of a language may appear simple (in terms of the syllable to word ration), but would cause a misleading scoring of the complexity of a text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a5f6997",
    "metadata": {},
    "source": [
@@ -417,7 +425,7 @@
    "id": "b56f494c",
    "metadata": {},
    "source": [
-    "## f) Working with parses: **todo**\n",
+    "## f) Working with parses:\n",
     "the final lines of the code template contain three `for` loops. Write the functions needed to complete these loops so that they print: "
    ]
   },
@@ -1688,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9b39de8e",
    "metadata": {},
    "outputs": [],
@@ -1702,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a990e312",
    "metadata": {},
    "outputs": [],
@@ -1734,7 +1742,7 @@
     "            ind.append(i)\n",
     "\n",
     "    df = df[~df.index.isin(ind)]\n",
-    "\n",
+    "    df.reset_index(inplace=True, drop=True)\n",
     "    #^ - Print the dimensions of the resulting dataframe using the shape method.\n",
     "    # len(df) == 36223-28139\n",
     "    print(df.shape)\n",
@@ -1743,12 +1751,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "49eb3912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8084, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = csv_to_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "beca10af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = csv_to_df()"
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "88946ffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path(Path.cwd() / \"pickles\" / \"speeches.pkl\")\n",
+    "df = pd.read_pickle(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "17aa9a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.utils import simple_preprocess\n",
+    "def list_to_str(lst):\n",
+    "    ''' take a list of words or Spacy tokens and return a single joined string ''' \n",
+    "    if lst and isinstance(lst[0], spacy.tokens.span.Span):\n",
+    "        return ' '.join([x.text for x in lst])\n",
+    "    elif lst and isinstance(lst[0], str):\n",
+    "        return ' '.join([x for x in lst])\n",
+    "    else:\n",
+    "        print('provide list of spaCy spans or string')\n",
+    "\n",
+    "def gensim_simple(doc):\n",
+    "        doc = doc.text        \n",
+    "        return list_to_str(simple_preprocess(doc))\n",
+    "\n",
+    "\n",
+    "\n",
+    "df['speech_pp']= df['docs'].apply(lambda x: gensim_simple(x))\n"
    ]
   },
   {
@@ -1763,12 +1826,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6f06ec",
+   "id": "58d0c252",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import f1_score,  classification_report\n",
+    "from sklearn import svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc6f06ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "random_seed = 26\n",
     "max_features = 3000\n",
@@ -1788,15 +1863,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e25deca",
+   "metadata": {},
+   "source": [
+    "$$F1 = \\frac{TP}{TP+\\frac{1}{2}(FP+FN)}$$\n",
+    "- best value at 1 \n",
+    "- worst score at 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "af3f7103",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.44126993575550516\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.73      0.98      0.83      1205\n",
+      "                 Labour       0.72      0.44      0.55       579\n",
+      "       Liberal Democrat       1.00      0.01      0.03        67\n",
+      "Scottish National Party       0.84      0.22      0.35       170\n",
+      "\n",
+      "               accuracy                           0.73      2021\n",
+      "              macro avg       0.82      0.41      0.44      2021\n",
+      "           weighted avg       0.74      0.73      0.68      2021\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import f1_score,  classification_report\n",
-    "from sklearn import svm\n",
     "rfc = RandomForestClassifier(random_state=random_seed)\n",
     "n_estimators = 300\n",
     "\n",
@@ -1809,10 +1910,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "da9ee15c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5846137591595653\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.82      0.92      0.87      1205\n",
+      "                 Labour       0.72      0.68      0.70       579\n",
+      "       Liberal Democrat       0.83      0.07      0.14        67\n",
+      "Scottish National Party       0.78      0.53      0.63       170\n",
+      "\n",
+      "               accuracy                           0.79      2021\n",
+      "              macro avg       0.79      0.55      0.58      2021\n",
+      "           weighted avg       0.79      0.79      0.78      2021\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "linear_svc = svm.SVC(kernel='linear')\n",
     "linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
@@ -1832,12 +1952,132 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e79fe8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "random_seed = 26\n",
+    "max_features = 3000\n",
+    "n_gram_size = (1,3)\n",
+    "\n",
+    "gram_tfidf_vectorizer = TfidfVectorizer(stop_words=\"english\",max_features=max_features, ngram_range=n_gram_size)\n",
+    "gram_tfidf = gram_tfidf_vectorizer.fit_transform(df.speech) \n",
+    "X_train, X_test, y_train, y_test = train_test_split(gram_tfidf, df.party, random_state=random_seed, shuffle=True, stratify=df.party)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "60a95366",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4752492885692674\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.73      0.97      0.83      1205\n",
+      "                 Labour       0.76      0.46      0.57       579\n",
+      "       Liberal Democrat       0.00      0.00      0.00        67\n",
+      "Scottish National Party       0.82      0.35      0.49       170\n",
+      "\n",
+      "               accuracy                           0.74      2021\n",
+      "              macro avg       0.58      0.45      0.48      2021\n",
+      "           weighted avg       0.72      0.74      0.70      2021\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rfc_fitted = rfc.fit(X_train, y_train)\n",
+    "\n",
+    "print(f1_score(y_test, rfc_fitted.predict(X_test), average='macro'))\n",
+    "print(classification_report(y_test, rfc.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa706427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5741880652063533\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.83      0.92      0.87      1205\n",
+      "                 Labour       0.73      0.72      0.73       579\n",
+      "       Liberal Democrat       1.00      0.03      0.06        67\n",
+      "Scottish National Party       0.78      0.55      0.64       170\n",
+      "\n",
+      "               accuracy                           0.80      2021\n",
+      "              macro avg       0.83      0.55      0.57      2021\n",
+      "           weighted avg       0.80      0.80      0.78      2021\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_svc_fitted = linear_svc.fit(X_train, y_train)\n",
+    "linear_svc_fitted.predict(X_test)\n",
+    "\n",
+    "print(f1_score(y_test, linear_svc.predict(X_test), average='macro'))\n",
+    "print(classification_report(y_test, linear_svc_fitted.predict(X_test)))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c13c9d2c",
    "metadata": {},
    "source": [
     "## e) Implement a new custom tokenizer and pass it to the tokenizer argument of Tfidfvectorizer. \n",
     "You can use this function in any way you like to try to achieve the best classification performance while keeping the number of features to no more than 3000, and using the same three classifiers as above. Print the clas- sification report for the best performing classifier using your tokenizer. Marks will be awarded both for a high overall classification performance, and a good trade-off between classification performance and efficiency (i.e., using fewer parameters)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28702d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df['docs'] = df['speech'].apply(lambda x: nlp(x))\n",
+    "path = os.path.join('pickles', 'speeches.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "493c56c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# df.to_pickle(path) # saving to pickle it doesn't require parsing every load (~15m)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m path = \u001b[43mos\u001b[49m.path.join(\u001b[33m'\u001b[39m\u001b[33mpickles\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mspeeches.pkl\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m df = pd.read_pickle(path)\n\u001b[32m      6\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mdocs\u001b[39m\u001b[33m'\u001b[39m][-\u001b[32m5\u001b[39m:]\n",
+      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# df.to_pickle(path) # saving to pickle it doesn't require parsing every load (~15m)\n",
+    "import pandas as pd\n",
+    "path = os.path.join('pickles', 'speeches.pkl')\n",
+    "\n",
+    "df = pd.read_pickle(path)\n",
+    "df['docs'][-5:]\n"
    ]
   },
   {
